PFBundles: Create /topologies/nodes route
